--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div{
         <h1>Nikita Maiboroda</h1>
         <p>Python developer. Active persone . Alredy create telegram bot . Now learning front-end. </p>
         <h1>Portfolio</h1>
-        <p>https://rabilint.github.io/Di-GI/#ctop</p>
+        <a href="https://rabilint.github.io/Di-GI/#ctop">first site </a>
         <a href="mailto:rabilint2007@gmail.com">rabilint2007@gmail.com</a>
         <a href="https://www.instagram.com/rabilint/" target="_blank">
             <img src="87390.png" alt="87390" style="width:10px;height:10px;">
