--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@ div{
         <p>Python developer. Active persone . Alredy create telegram bot . Now learning front-end. </p>
         <h1>Portfolio</h1>
         <a href="https://rabilint.github.io/Di-GI/#ctop">first site </a>
-        <a href="mailto:rabilint2007@gmail.com">rabilint2007@gmail.com</a>
-        <a href="https://www.instagram.com/rabilint/" target="_blank">
-            <img src="87390.png" alt="87390" style="width:10px;height:10px;">
-        </a>
+        <div>
+            <a href="mailto:rabilint2007@gmail.com">rabilint2007@gmail.com</a>
+            <a href="https://www.instagram.com/rabilint/" target="_blank">
+                <img src="87390.png" alt="87390" style="width:10px;height:10px;">
+            </a>
+        </div>
     </div>
 </body>
 </html>
