--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@ div{
         <p>Python developer. Active persone . Alredy create telegram bot . Now learning front-end. </p>
         <h1>Portfolio</h1>
         <a href="https://rabilint.github.io/Di-GI/#ctop">first site </a>
-        <div>
-            <a href="mailto:rabilint2007@gmail.com">rabilint2007@gmail.com</a>
-            <a href="https://www.instagram.com/rabilint/" target="_blank">
-                <img src="87390.png" alt="87390" style="width:10px;height:10px;">
-            </a>
-        </div>
+        <h1> My contact </h1>
+        <a href="mailto:rabilint2007@gmail.com">rabilint2007@gmail.com</a>
+        <a href="https://www.instagram.com/rabilint/" target="_blank">
+            <img src="87390.png" alt="87390" style="width:10px;height:10px;">
+        </a>
     </div>
 </body>
 </html>
